Fixing problems with map/streetview mobile
Display was not responsive. Added a small amount of code to accomplish
this. Might consider something more "app like"?

--- a/WTA.Schedules/css/main.css
+++ b/WTA.Schedules/css/main.css
@@ -454,10 +454,18 @@ select{
 
 /* Map */
 #map-canvas {
-    height: 100%;
-    min-height:600px;
-    margin: 0;
-    padding: 50px 0 0 0;
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+}
+.map-container {
+    position:relative;
+    padding-bottom: 56.25%;
+    padding-top:35px;
+    height:0;
+    overflow:hidden;
 }
 
 /*Testing for pulsing search box border*/
